[versioneer]
VCS = git
style = pep440
versionfile_source = libmetgem/_version.py
versionfile_build = libmetgem/_version.py
tag_prefix = v
parentdir_prefix =

[metadata]
name = libmetgem
author = Nicolas Elie
author_email = nicolas.elie@cnrs.fr
description = Library for Molecular Networking calculations
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GPLv3+
url = https://github.com/metgem/libmetgem
keywords = chemistry, molecular networking, mass spectrometry
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    
[options]
zip_safe = False
python_requires = >=3.6